<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/color_background_tint" />

    <View
        android:id="@+id/view_vertical_line"
        android:layout_width="6dp"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_background_tint" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_date_time"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        app:cardBackgroundColor="@color/color_background_tint"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp">

        <TextView
            android:id="@+id/txt_date_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:text="5/07/2019"
            android:textColor="@color/color_text_last_access_time"
            android:textSize="14sp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview_date_time"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="4dp"
        android:layout_toRightOf="@+id/view_vertical_line"
        app:cardBackgroundColor="@color/color_background_tint"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:text="09:06 AM"
                android:textColor="@color/color_text_title_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/txt_confirmed"
                android:textColor="@color/color_text_title_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/txt_confirmed_title"
                android:textColor="@color/color_text_title_blue" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview_started"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        android:layout_toRightOf="@+id/view_vertical_line"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:text="09:06 AM"
                android:textColor="@color/color_text_last_access_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:text="000052019072200059"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/color_view_line" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon_car"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/car" />

                <TextView
                    android:id="@+id/txt_number_vin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@+id/icon_car"
                    android:text="1"
                    android:textColor="@color/color_text_title_blue"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_vin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="18dp"
                    android:layout_toRightOf="@+id/txt_number_vin"
                    android:text="@string/txt_VIN"
                    android:textColor="@color/color_text_last_access_time" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@+id/txt_vin"
                    android:background="@color/color_view_line" />

                <LinearLayout
                    android:id="@+id/linearlayout_loading_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/txt_loading"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="2dp"
                        android:text="1"
                        android:textColor="@color/color_text_number_loading_place"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/txt_place" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearlayout_loading_place"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/txt_unloading"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="2dp"
                        android:text="1"
                        android:textColor="@color/color_text_number_unloading_place"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/txt_place" />

                </LinearLayout>


            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>